--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.0'
     compile 'com.android.support:support-v4:23.0.0'
+    // unofficial mirror of Volley library
+    compile 'com.mcxiaoke.volley:library:1.0.18'
 }
