--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,6 @@ dependencies {
     compile 'com.android.support:support-v4:23.0.0'
     // unofficial mirror of Volley library
     compile 'com.mcxiaoke.volley:library:1.0.18'
+    compile 'com.google.android.gms:play-services-location:7.8.0'
+    compile 'com.google.android.gms:play-services-maps:7.8.0'
 }
