--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,12 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+
+    <permission
+        android:name="com.example.coffeemania.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature"/>
+    <uses-permission android:name="com.example.coffeemania.permission.MAPS_RECEIVE"/>
 
     <application
         android:allowBackup="true"
@@ -11,6 +17,11 @@
         android:label="@string/app_name"
         android:name=".misc.AppController"
         android:theme="@style/AppTheme" >
+
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyBVki9B2NwVabTsPIkjYOGZp7iWa6yrHu8"/>
+
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name" >
