--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     compile 'com.mcxiaoke.volley:library:1.0.18'
     compile 'com.google.android.gms:play-services-location:7.8.0'
     compile 'com.google.android.gms:play-services-maps:7.8.0'
+
+    androidTestCompile 'com.jayway.android.robotium:robotium-solo:5.4.1'
 }
